add cache for similarity